# spec-kit-agent-governance

./: .extensionignore  .gitignore  AGENTS.md  CHANGELOG.md  README.md  extension.yml  pyproject.toml
.github/workflows/: ci.yml  extension-artifact.yml
commands/: speckit.agent-governance.refresh.md  speckit.repository-governance.refresh.md
docs/: extension-governance.md
scripts/: refresh_agent_governance.py  refresh_repository_governance.py
templates/: agent-governance-template.md  repository-governance-template.md
tests/: test_governance_domains.py
tools/: build_repository_governance_zip.py
