[project]
name = "spec-kit-agent-governance"
version = "2.0.5"
description = "Spec Kit extension for generating Repository Governance Framework files"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pyyaml>=6.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
