[project]
name = "spec-kit-agent-governance"
version = "3.0.0"
description = "Spec Kit extension for generating project-governance projections"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pyyaml>=6.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
